[tool.poetry]
name = "moons-of-jupyter"
packages = [{include = "moj"}]
version = "1.0.0"
description = "Run a single Jupyter Lab instance, connected to many Python environments"
authors = ["Jacob Kaplan-Moss <jacob@jacobian.org>"]
license = "wtfpl"
readme = "README.md"
repository = "https://github.com/jacobian/moons-of-jupyter/"

[tool.poetry.scripts]
moj = "moj.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.3"
ncolony = "^18.6.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2.3"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
